# velo-games-contracts

./: .gitignore  Cargo.toml  README.md
artifacts/: dao_bets_game.wasm  manager.wasm  prediction_game.wasm  users.wasm
contracts/games/dao-bets-game/: Cargo.toml  README.md
contracts/games/dao-bets-game/examples/: schema.rs
contracts/games/dao-bets-game/schema/: dao-bets-game.json
contracts/games/dao-bets-game/src/: contract.rs  error.rs  msg.rs  state.rs
contracts/games/prediction-game/: Cargo.toml
contracts/games/prediction-game/schema/: prediction_game.json
contracts/games/prediction-game/src/: contract.rs  error.rs  state.rs
contracts/manager/: Cargo.toml
contracts/manager/schema/: manager.json
contracts/manager/src/: contract.rs  error.rs  msg.rs  state.rs
contracts/managers/manager/: README.md
contracts/managers/manager/examples/: schema.rs
contracts/managers/manager/schema/: manager.json
contracts/managers/manager/src/: contract.rs  msg.rs  state.rs
contracts/others/users/: Cargo.toml
contracts/others/users/examples/: schema.rs
contracts/others/users/schema/: users.json
contracts/others/users/src/: contract.rs  error.rs  state.rs
contracts/prediction-game/: Cargo.toml  README.md
contracts/prediction-game/examples/: schema.rs
contracts/prediction-game/schema/: prediction_game.json
contracts/prediction-game/schema/raw/: execute.json  instantiate.json  query.json  response_to_config.json  response_to_finished_round.json  response_to_get_claim_info_by_user.json  response_to_get_identifiers.json  response_to_get_round_denoms.json  response_to_get_users_per_round.json  response_to_my_current_position.json  response_to_my_game_list.json  response_to_my_pending_reward.json  response_to_my_pending_reward_rounds.json  response_to_status.json  response_to_total_spent.json
contracts/prediction-game/src/: contract.rs  error.rs  state.rs
contracts/users/: Cargo.toml  README.md
contracts/users/examples/: schema.rs
contracts/users/examples/schema/: prediction_game.json
contracts/users/schema/: users.json
contracts/users/schema/raw/: execute.json  instantiate.json  query.json  response_to_config.json  response_to_user_by_address.json  response_to_users.json
contracts/users/src/: contract.rs  error.rs  state.rs
scripts/: schema.sh
