[workspace]
members = [
    "packages/*",
    "contracts/*"
]
resolver = "2"

[workspace.package]
version       = "0.1.0"
edition       = "2021"  
authors       = ["Keyne"]

[profile.release]
rpath = false
lto = true
overflow-checks = true
opt-level = 3
debug = false
debug-assertions = false

[profile.release.package.prediction]
codegen-units = 1
incremental = false

[workspace.dependencies]
cosmwasm-std                = "1.3.3"
thiserror                   = "1.0.47"
cw-storage-plus             = "1.1.0"
schemars                    = "0.8.13"
cosmwasm-schema             = "1.3.3"
cw2                         = "1.1.0"
cw-utils                    = "1.0.1"
cw0                         = "0.10.3"
serde                       = { version = "1.0.188", default-features = false, features = ["derive"] }
prediction                  = { path = "./packages/prediction" }
pyth-sdk-cw                 = "1.2.0"
