[workspace]
members = [
    "packages/*",
    "contracts/*"
]
resolver = "2"

[workspace.package]
version       = "0.1.0"
edition       = "2021"  
authors       = ["Keyne"]

[profile.release]
rpath = false
lto = true
overflow-checks = true
opt-level = 3
debug = false
debug-assertions = false

[profile.release.package.prediction]
codegen-units = 1
incremental = false

[profile.release.package.general]
codegen-units = 1
incremental = false

[workspace.dependencies]
cosmwasm-std                = "1.5.0"
thiserror                   = "1.0.50"
cw-storage-plus             = "1.2.0"
schemars                    = "0.8.16"
cosmwasm-schema             = "1.5.0"
cw2                         = "1.1.2"
cw-utils                    = "1.0.3"
cw0                         = "0.10.3"
serde                       = { version = "1.0.193", default-features = false, features = ["derive"] }
prediction                  = { path = "./packages/prediction" }
general                     = { path = "./packages/general" }
pyth-sdk-cw                 = "1.2.0"
cw-ownable                  = "0.5.1" 
