[workspace]
members = [
    "packages/*",
    "contracts/games/*",
    "contracts/managers/*",
    "contracts/others/*",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Keyne"]

[profile.release]
rpath            = false
lto              = true
overflow-checks  = true
opt-level        = 3
debug            = false
debug-assertions = false

[profile.release.package.prediction]
codegen-units = 1
incremental   = false

[profile.release.package.general]
codegen-units = 1
incremental   = false

[workspace.dependencies]
cosmwasm-std    = { version = "2.1.4", features = ["cosmwasm_1_2"] }
thiserror       = "2.0.3"
cw-storage-plus = "2.0.0"
schemars        = "0.8.21"
cosmwasm-schema = "2.1.4"
cw2             = "2.0.0"
cw-utils        = "2.0.0"
serde           = { version = "1.0.215", default-features = false, features = ["derive"] }
prediction      = { path = "./packages/prediction" }
general         = { path = "./packages/general" }
dao-bets        = { path = "./packages/dao-bets" }
cw-ownable      = "2.1.0"
censor          = "0.3.0"
url             = "2.5.3"
neutron-sdk     = "0.11.0"
chrono          = { "version" = "0.4.38", "default-features" = false }
