[package]
name = "manager"
version = "0.1.8"
edition = "2021"
authors = ["Keyne"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-std.workspace = true
cw-ownable.workspace = true
thiserror.workspace = true
cw2.workspace = true
cw-storage-plus.workspace = true
cosmwasm-schema.workspace = true
general.workspace = true
prediction.workspace = true
