[package]
name = "users"
version = "0.1.3"
edition = "2021"
authors = ["Keyne"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-std = { workspace = true }
cw-ownable = { workspace = true }
thiserror = { workspace = true }
cw2 = { workspace = true }
cw-storage-plus = { workspace = true }
cosmwasm-schema = { workspace = true }
general = { workspace = true }
censor = { workspace = true }
url = { workspace = true }

