[package]
name = "dao-bets-game"
version = "0.1.3"
edition = "2021"
authors = ["Keyne"]
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []

[dependencies]
cw2.workspace = true
cosmwasm-std.workspace = true
cw-storage-plus.workspace = true
schemars.workspace = true
thiserror.workspace = true
cosmwasm-schema.workspace = true
dao-bets.workspace = true
cw-utils.workspace = true
general.workspace = true
cw-ownable.workspace = true
