[package]
name = "prediction_game"
version = "0.1.5"
edition = "2021"
authors = ["Keyne"]
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []

[dependencies]
cw2.workspace = true
cosmwasm-std.workspace = true
cw-storage-plus.workspace = true
schemars.workspace = true
serde.workspace = true
thiserror.workspace = true
cosmwasm-schema.workspace = true
prediction.workspace = true
cw-utils.workspace = true
general.workspace = true
neutron-sdk.workspace = true
chrono.workspace = true
