[package]
name = "users"
version = "0.1.6"
edition = "2021"
authors = ["Keyne"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []

[dependencies]
cosmwasm-std.workspace = true
thiserror.workspace = true
cw2.workspace = true
cw-storage-plus.workspace = true
cosmwasm-schema.workspace = true
general.workspace = true
censor.workspace = true
url.workspace = true
